@@ -1,4 +1,4 @@
-/*	$NetBSD: res_mkquery.c,v 1.18 2000/04/25 13:57:08 itojun Exp $	*/
+/*	$NetBSD: res_mkquery.c,v 1.18.4.1 2002/09/04 01:26:44 itojun Exp $	*/
 
 /*-
  * Copyright (c) 1985, 1993
@@ -59,7 +59,7 @@
 static char sccsid[] = "@(#)res_mkquery.c	8.1 (Berkeley) 6/4/93";
 static char rcsid[] = "Id: res_mkquery.c,v 8.5 1996/08/27 08:33:28 vixie Exp ";
 #else
-__RCSID("$NetBSD: res_mkquery.c,v 1.18 2000/04/25 13:57:08 itojun Exp $");
+__RCSID("$NetBSD: res_mkquery.c,v 1.18.4.1 2002/09/04 01:26:44 itojun Exp $");
 #endif
 #endif /* LIBC_SCCS and not lint */
 
@@ -98,7 +98,7 @@ res_mkquery(op, dname, class, type, data, datalen, newrr_in, buf, buflen)
 	int buflen;		/* size of buffer */
 {
 	register HEADER *hp;
-	register u_char *cp;
+	register u_char *cp, *ep;
 	register int n;
 	u_char *dnptrs[20], **dpp, **lastdnptr;
 
@@ -135,7 +135,7 @@ res_mkquery(op, dname, class, type, data, datalen, newrr_in, buf, buflen)
 	hp->rd = (_res.options & RES_RECURSE) != 0;
 	hp->rcode = NOERROR;
 	cp = buf + HFIXEDSZ;
-	buflen -= HFIXEDSZ;
+	ep = buf + buflen;
 	dpp = dnptrs;
 	*dpp++ = buf;
 	*dpp++ = NULL;
@@ -146,12 +146,12 @@ res_mkquery(op, dname, class, type, data, datalen, newrr_in, buf, buflen)
 	switch (op) {
 	case QUERY:	/*FALLTHROUGH*/
 	case NS_NOTIFY_OP:
-		if ((buflen -= QFIXEDSZ) < 0)
+		if (ep - cp < QFIXEDSZ)
 			return (-1);
-		if ((n = dn_comp(dname, cp, buflen, dnptrs, lastdnptr)) < 0)
+		if ((n = dn_comp(dname, cp, ep - cp - QFIXEDSZ, dnptrs,
+		    lastdnptr)) < 0)
 			return (-1);
 		cp += n;
-		buflen -= n;
 		__putshort(type, cp);
 		cp += sizeof(u_int16_t);
 		__putshort(class, cp);
@@ -162,12 +162,12 @@ res_mkquery(op, dname, class, type, data, datalen, newrr_in, buf, buflen)
 		/*
 		 * Make an additional record for completion domain.
 		 */
-		buflen -= RRFIXEDSZ;
-		if ((n = dn_comp((const char *)data, cp, buflen, dnptrs,
-		    lastdnptr)) < 0)
+		if (ep - cp < RRFIXEDSZ)
+			return (-1);
+		if ((n = dn_comp((const char *)data, cp, ep - cp - RRFIXEDSZ,
+		    dnptrs, lastdnptr)) < 0)
 			return (-1);
 		cp += n;
-		buflen -= n;
 		__putshort(T_NULL, cp);
 		cp += sizeof(u_int16_t);
 		__putshort(class, cp);
@@ -183,7 +183,7 @@ res_mkquery(op, dname, class, type, data, datalen, newrr_in, buf, buflen)
 		/*
 		 * Initialize answer section
 		 */
-		if (buflen < 1 + RRFIXEDSZ + datalen)
+		if (ep - cp < 1 + RRFIXEDSZ + datalen)
 			return (-1);
 		*cp++ = '\0';	/* no domain name */
 		__putshort(type, cp);
